# OurOdplatform

./: .env  .gitignore  D2-reset-project-需求文档SRS.md  D3-数据流水线.md  D4-数据验证.md  D5-运行配置-学员版.md  D6-模型训练-学员版.md  ODP-SRS-07_frame_source_需求规格_V1.0.md  ODPlatform说明.md  README.md  _paths_patched.py  make_demo.py  pyproject.toml  setup.py  yolo11n.pt
apps/desktop/: pyproject.toml
apps/desktop/src/od_desktop/: __init__.py  main.py
apps/platform/: README.md  pyproject.toml
apps/platform/src/od_platform/: __init__.py  _version.py
apps/platform/src/od_platform/cli/: evaluate_model.py  init_project.py  model_infer.py  model_train.py  reset_project.py  show_paths.py  snapshot_project.py  train_model.py  transform_data.py  validate_data.py
apps/platform/src/od_platform/common/: __init__.py  archive_utils.py  audit_utils.py  constants.py  dataset_path.py  log_rename.py  logging_utils.py  model_path.py  paths.py  performance_utils.py  refs.py  registry_utils.py  system_utils.py
apps/platform/src/od_platform/data_pipeline/: __init__.py  orchestrator.py  report.py
apps/platform/src/od_platform/data_pipeline/convert/: __init__.py  registry.py
apps/platform/src/od_platform/data_pipeline/convert/converters/: __init__.py  coco.py  yolo.py
apps/platform/src/od_platform/data_pipeline/split/: __init__.py  _common.py  manifest.py  materializer.py  split_service.py  strategy_registry.py  yaml_writer.py
apps/platform/src/od_platform/data_pipeline/split/strategies/: __init__.py  common.py  random_split.py  stratified_multilabel_split.py  stratified_split.py
apps/platform/src/od_platform/data_validation/: __init__.py  extended_common.py  extended_phash.py  extended_records.py  extended_reports.py  extended_validation.py  fingerprint.py  profiler.py  registry.py  render.py  render_markdown.py  report.py  service.py  snapshot.py
apps/platform/src/od_platform/data_validation/checks/: __init__.py  annotation_coverage.py  bbox_size_outliers.py  bbox_within_image.py  box_geometry.py  class_balance.py  class_presence.py  coverage.py  duplicate_annotations.py  empty_or_tiny_files.py  image_integrity.py  image_resolution_outliers.py  label_density_outliers.py  label_format.py  orphan_labels.py  pair_existence.py  split_presence.py  split_uniqueness.py  stem_collision.py  yaml_schema.py  yolo_labels.py
apps/platform/src/od_platform/evaluation/: __init__.py  service.py
apps/platform/src/od_platform/frame_source/: __init__.py  factory.py  pyproject.toml  registry.py
apps/platform/src/od_platform/frame_source/core/: __init__.py  base.py  config.py  types.py
apps/platform/src/od_platform/frame_source/sources/: __init__.py  camera.py  depth_camera.py  image.py  ir_camera.py  video.py
apps/platform/src/od_platform/frame_source/wrappers/: __init__.py  aio.py  threaded.py
apps/platform/src/od_platform/inference/: __init__.py  pipeline.py  pipeline_config.py  service.py
apps/platform/src/od_platform/runtime_config/: generator.py
apps/platform/src/od_platform/tests/: test.py
apps/platform/src/od_platform/training/: __init__.py  service.py
apps/platform/src/od_platform/validate_dateset/: render.py  report.py  service.py  snapshot.py
apps/platform/src/od_platform/validate_dateset/check/: yaml_schema.py
apps/platform/src/od_platform/validate_dateset/checks/: label_format.py  pair_existence.py  split_uniqueness.py  yaml_schema.py
apps/platform/src/od_platform/visualization/: visualizer.py
apps/platform/src/od_platform/visualization/core/: data_types.py
apps/platform/src/od_platfrom/cli/: paths.py
apps/platform/tests/: 02.py  03.py  04.py  train.py
scripts/: convert_rsod.py  evaluate_model.py  gen_config.py  init_project.py  model_infer.py  (+6 more)
(+17 files in other folders)
