[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "od-platform"
version = "0.2.0"
description = "ODPlatform — 通用目标检测开发平台"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "ODPlatform Team" },
]

keywords = ["object-detection", "yolo", "deep-learning", "ml-platform"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "colorlog>=6.7.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
    "pydantic>=2.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
odp-init       = "od_platform.cli.init_project:main"
odp-paths      = "od_platform.cli.show_paths:main"
odp-reset      = "od_platform.cli.reset_project:main"
odp-snapshot   = "od_platform.cli.snapshot_project:main"
odp-backup     = "od_platform.cli.snapshot_project:main"
odp-transform  = "od_platform.cli.transform_data:main"
odp-validate   = "od_platform.cli.validate_data:main"
odp-gen-config = "od_platform.runtime_config.generator:main"
odp-train      = "od_platform.cli.train_model:main"
odp-val        = "od_platform.cli.evaluate_model:main"
odp-infer      = "od_platform.cli.model_infer:main"
