[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odp-frame-source"
version = "0.1.0"
description = "ODPlatform frame_source — 统一帧输入源抽象层(摄像头/视频/图片/文件夹)"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
include = ["frame_source*"]
